[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-backup"
version = "1.0.0"
authors = [
    { name = "cromachina" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "watchdog",
    "schedule",
]

[project.urls]
"Homepage" = "https://github.com/cromachina/auto-backup"

[project.scripts]
auto-backup = "auto_backup:main"
